--- a/index.html
+++ b/index.html
@@ -4,18 +4,36 @@
         <meta charset="UTF-8" />
         <link rel="icon" type="image/svg+xml" href="/vite.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap"
+            rel="stylesheet"
+        />
         <title>Bears</title>
     </head>
-    <body>
-        <header>
+    <body class="font-josefin-sans text-white">
+        <header class="bg-landing-background bg-cover bg-no-repeat h-72">
             <div class="wrapper">
-                <h1 class="text-4xl">Nature <span>Bears</span> Edition</h1>
-                <nav>
-                    <ul
-                        class="border-t-2 border-b-black border-t-red-900 border-b-2"
-                    >
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#gallery">Bears</a></li>
+                <h1 class="text-4xl p-4">
+                    Nature <span class="font-bold">Bears</span> Edition
+                </h1>
+                <nav class="m-4">
+                    <ul class="h-36 flex flex-col justify-around pb-8">
+                        <li class="mb-8">
+                            <a
+                                href="#about"
+                                class="bg-bg-blue pt-4 px-10 pb-3 text-2xl border-bg-blue border-4 hover:border-white hover:border-4"
+                                >About</a
+                            >
+                        </li>
+                        <li>
+                            <a
+                                href="#gallery"
+                                class="text-white bg-bg-blue pt-4 px-10 pb-3 text-2xl border-bg-blue border-4 hover:border-white hover:border-4"
+                                >Bears</a
+                            >
+                        </li>
                     </ul>
                 </nav>
             </div>
@@ -25,16 +43,17 @@
         <main>
             <section>
                 <!--ABOUT section-->
-                <section class="about" id="about">
+                <section class="about bg-about-bg h-112 px-4 py-10" id="about">
                     <div class="wrapper">
-                        <div class="imgContainer">
+                        <div class="imgContainer mb-4">
                             <img
                                 src="../images/side-bear.jpg"
                                 alt="a sleeping bear"
+                                class="border-blue-500 border-2"
                             />
                         </div>
                         <div class="textContainer">
-                            <h2>Meet Teddy</h2>
+                            <h2 class="font-bold text-xl mb-3">Meet Teddy</h2>
                             <p>
                                 Lorem ipsum, dolor sit amet consectetur
                                 adipisicing elit. Laborum beatae numquam
@@ -49,10 +68,13 @@
                 </section>
 
                 <!--Gallery section-->
-                <section id="gallery" class="gallery">
-                    <div class="wrapper">
-                        <h2>Check our beautiful bears</h2>
-                        <ul>
+                <section
+                    id="gallery"
+                    class="gallery bg-[url('./images/blue-trees.jpg')] p-4 pb-10 h-[96rem] bg-cover"
+                >
+                    <div class="wrapper h-full">
+                        <h2 class="text-2xl my-8">Check our beautiful bears</h2>
+                        <ul class="h-[95%] flex flex-col gap-8">
                             <li>
                                 <img
                                     src="../images/bear1.jpg"
@@ -96,7 +118,7 @@
             </section>
         </main>
 
-        <footer>
+        <footer class="bg-about-bg p-2 text-center">
             <div class="wrapper">
                 <p>Build with ❤️ by Juno</p>
             </div>
