--- a/index.html
+++ b/index.html
@@ -49,12 +49,14 @@
                             <img
                                 src="../images/side-bear.jpg"
                                 alt="a sleeping bear"
-                                class="border-blue-500 border-2"
+                                class="border-blue-500 border-2 mx-auto"
                             />
                         </div>
                         <div class="textContainer">
-                            <h2 class="font-bold text-xl mb-3">Meet Teddy</h2>
-                            <p>
+                            <h2 class="font-bold text-xl mb-3 w-max mx-auto">
+                                Meet Teddy
+                            </h2>
+                            <p class="text-center">
                                 Lorem ipsum, dolor sit amet consectetur
                                 adipisicing elit. Laborum beatae numquam
                                 blanditiis vel facere cumque! Officiis, aperiam
@@ -70,42 +72,44 @@
                 <!--Gallery section-->
                 <section
                     id="gallery"
-                    class="gallery bg-[url('./images/blue-trees.jpg')] p-4 pb-10 h-[96rem] bg-cover"
+                    class="gallery bg-[url('./images/blue-trees.jpg')] p-4 pb-10 h-max bg-cover"
                 >
                     <div class="wrapper h-full">
-                        <h2 class="text-2xl my-8">Check our beautiful bears</h2>
+                        <h2 class="text-2xl my-8 mx-auto w-max">
+                            Check our beautiful bears
+                        </h2>
                         <ul class="h-[95%] flex flex-col gap-8">
-                            <li>
+                            <li class="mx-auto">
                                 <img
                                     src="../images/bear1.jpg"
                                     alt="a white bear"
                                 />
                             </li>
-                            <li>
+                            <li class="mx-auto">
                                 <img
                                     src="../images/bear2.jpg"
                                     alt="portrait of bear"
                                 />
                             </li>
-                            <li>
+                            <li class="mx-auto">
                                 <img
                                     src="../images/bear3.jpg"
                                     alt="bear in the wild"
                                 />
                             </li>
-                            <li>
+                            <li class="mx-auto">
                                 <img
                                     src="../images/bear4.jpg"
                                     alt="baby bear"
                                 />
                             </li>
-                            <li>
+                            <li class="mx-auto">
                                 <img
                                     src="../images/bear5.jpg"
                                     alt="another white bear"
                                 />
                             </li>
-                            <li>
+                            <li class="mx-auto">
                                 <img
                                     src="../images/bear6.jpg"
                                     alt="lazy bear"
